# Suggested code may be subject to a license. Learn more: ~LicenseLog:499899394.
[metadata]
name = python-package-calc
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = A short description of your package
long_description = A longer description of your package
long_description_content_type = text/markdown
url = https://github.com/your-username/python-package
project_urls =
    Documnetation = https://doc.com/python-package
classifiers =
    Programming Language :: Python :: 3
dynamic = version
install_requires = file:requirements.txt


[options]
python_requires = >=3.9
include_package_data = True
package_dir=
    =src
packages = find

[options.extras_require]
dev = 
    pytest>=6
    pytest-cov>=2
